# Cynthia-perception

./: CMakeLists.txt  README.md  doc.md
Dependencies/cute/: CMakeLists.txt  README.md
Dependencies/cute/include/cute/: README.md  debug.h  utility.h
Dependencies/cute/include/cute/image_acquisition/: image.h  image_def.h
Dependencies/cute/test/: utility_test.cpp
include/: stb_image.h  stb_image_write.h
include/cynthia-perception/: core.h  cy_eigen.h  hello-world.cpp
include/graphics/: window.h
include/useful_guards/: compatibility.h
include/useful_guards/text/: color.h
src/: hello2.cpp  testCode.cpp  testCode2.cpp  window.cpp
